--- a/notebooks/exploratory/bobby_notebooks/Cleaned notebook.ipynb
+++ b/notebooks/exploratory/bobby_notebooks/Cleaned notebook.ipynb
@@ -5073,8 +5073,8 @@
    ],
    "source": [
     "#param_grid = {'criterion': ['gini', 'entropy'],\n",
-    "                'max_depth': [1, 3, 5, 7, 10],\n",
-    "                'min_samples_split': [3, 5, 7]}\n",
+    "                #'max_depth': [1, 3, 5, 7, 10],\n",
+    "                #'min_samples_split': [3, 5, 7]}\n",
     "#dt_param_grid = GridSearchCV(estimator=dt, param_grid=param_grid)\n",
     "#dt_param_grid.fit(X_train, y_train)\n",
     "\n",
