--- a/notebooks/exploratory/killian_notebooks/killian_notebook.ipynb
+++ b/notebooks/exploratory/killian_notebooks/killian_notebook.ipynb
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1509,
    "metadata": {},
    "outputs": [
     {
@@ -2757,8 +2757,126 @@
       "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  estimator.fit(X_train, y_train, **fit_params)\n",
       "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  estimator.fit(X_train, y_train, **fit_params)\n"
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:531: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "/Applications/Utilities/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1 score</th>\n",
+       "      <th>accuracy_score</th>\n",
+       "      <th>Notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.829986</td>\n",
+       "      <td>0.806431</td>\n",
+       "      <td>Base model with standard feature engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.829915</td>\n",
+       "      <td>0.806330</td>\n",
+       "      <td>Removed Date Recorded and Construction Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.831495</td>\n",
+       "      <td>0.808182</td>\n",
+       "      <td>Removed Construction Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.829788</td>\n",
+       "      <td>0.805960</td>\n",
+       "      <td>Removed basin column</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.827350</td>\n",
+       "      <td>0.802542</td>\n",
+       "      <td>Dropped first columns for OHE'd features</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.828943</td>\n",
+       "      <td>0.805404</td>\n",
+       "      <td>Dropped Age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.811101</td>\n",
+       "      <td>0.782643</td>\n",
+       "      <td>Dropped 81 columns with Feature Permutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.828293</td>\n",
+       "      <td>0.804663</td>\n",
+       "      <td>Dropped all columns with a FP score under 0.001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.813574</td>\n",
+       "      <td>0.805233</td>\n",
+       "      <td>SMOTE-ed in more dummy data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   f1 score  accuracy_score                                            Notes\n",
+       "0  0.829986        0.806431     Base model with standard feature engineering\n",
+       "1  0.829915        0.806330      Removed Date Recorded and Construction Year\n",
+       "2  0.831495        0.808182                        Removed Construction Year\n",
+       "3  0.829788        0.805960                             Removed basin column\n",
+       "4  0.827350        0.802542         Dropped first columns for OHE'd features\n",
+       "5  0.828943        0.805404                                      Dropped Age\n",
+       "6  0.811101        0.782643      Dropped 81 columns with Feature Permutation\n",
+       "7  0.828293        0.804663  Dropped all columns with a FP score under 0.001\n",
+       "8  0.813574        0.805233                      SMOTE-ed in more dummy data"
+      ]
+     },
+     "execution_count": 1509,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2768,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1510,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,9 +2895,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1511,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1 score</th>\n",
+       "      <th>accuracy_score</th>\n",
+       "      <th>Notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Dataset 1</th>\n",
+       "      <td>0.829986</td>\n",
+       "      <td>0.806431</td>\n",
+       "      <td>Base model with standard feature engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.829915</td>\n",
+       "      <td>0.806330</td>\n",
+       "      <td>Removed Date Recorded and Construction Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.831495</td>\n",
+       "      <td>0.808182</td>\n",
+       "      <td>Removed Construction Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.829788</td>\n",
+       "      <td>0.805960</td>\n",
+       "      <td>Removed basin column</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.827350</td>\n",
+       "      <td>0.802542</td>\n",
+       "      <td>Dropped first columns for OHE'd features</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.828943</td>\n",
+       "      <td>0.805404</td>\n",
+       "      <td>Dropped Age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.811101</td>\n",
+       "      <td>0.782643</td>\n",
+       "      <td>Dropped 81 columns with Feature Permutation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.828293</td>\n",
+       "      <td>0.804663</td>\n",
+       "      <td>Dropped all columns with a FP score under 0.001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.813574</td>\n",
+       "      <td>0.805233</td>\n",
+       "      <td>SMOTE-ed in more dummy data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           f1 score  accuracy_score  \\\n",
+       "Dataset 1  0.829986        0.806431   \n",
+       "2          0.829915        0.806330   \n",
+       "3          0.831495        0.808182   \n",
+       "4          0.829788        0.805960   \n",
+       "5          0.827350        0.802542   \n",
+       "6          0.828943        0.805404   \n",
+       "7          0.811101        0.782643   \n",
+       "8          0.828293        0.804663   \n",
+       "9          0.813574        0.805233   \n",
+       "\n",
+       "                                                     Notes  \n",
+       "Dataset 1     Base model with standard feature engineering  \n",
+       "2              Removed Date Recorded and Construction Year  \n",
+       "3                                Removed Construction Year  \n",
+       "4                                     Removed basin column  \n",
+       "5                 Dropped first columns for OHE'd features  \n",
+       "6                                              Dropped Age  \n",
+       "7              Dropped 81 columns with Feature Permutation  \n",
+       "8          Dropped all columns with a FP score under 0.001  \n",
+       "9                              SMOTE-ed in more dummy data  "
+      ]
+     },
+     "execution_count": 1511,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xgb_tester.df"
    ]
